01-AULAS/Aula10/01-vpc.tf
resource "aws_vpc" "vpc_terraform" {
  cidr_block = var.vpc_cidr

  tags = {
    "Name" = "vpc_terraform"
  }
}
